# catkin_ws_tx2

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/detect_hog/: RobotCamGlobalPos.h  RobotCamPos.h
devel/lib/detect_hog/: detect_hog2_node  detect_hog3_node  detect_hog_back  detect_hog_back_node  detect_hog_globalPos  detect_hog_left  detect_hog_node  detect_hog_readGloalPos  detect_hog_right  detect_hog_right_node
devel/lib/detect_hog_2/: detect_hog_2_node
devel/lib/detect_hog_3/: detect_hog_3_node
devel/lib/pkgconfig/: detect_hog.pc  detect_hog_2.pc  detect_hog_3.pc
devel/lib/python2.7/dist-packages/detect_hog/msg/: _RobotCamGlobalPos.py  _RobotCamPos.py  __init__.py
devel/share/common-lisp/ros/detect_hog/msg/: RobotCamGlobalPos.lisp  RobotCamPos.lisp  _package.lisp  _package_RobotCamGlobalPos.lisp  _package_RobotCamPos.lisp  detect_hog-msg.asd
devel/share/detect_hog/cmake/: detect_hog-msg-extras.cmake  detect_hog-msg-paths.cmake  detect_hogConfig.cmake
devel/share/detect_hog_2/cmake/: detect_hog_2Config.cmake
devel/share/detect_hog_3/cmake/: detect_hog_3Config.cmake
devel/share/gennodejs/ros/detect_hog/msg/: RobotCamGlobalPos.js  RobotCamPos.js  _index.js
devel/share/roseus/ros/detect_hog/: manifest.l
devel/share/roseus/ros/detect_hog/msg/: RobotCamGlobalPos.l  RobotCamPos.l
src/: src.kdev4
src/.kdev4/: src.kdev4
src/detect_hog/: CMakeLists.txt  launch.txt  launch_back.txt  launch_left.txt  launch_right.txt  package.xml
src/detect_hog/launch/: run.launch
src/detect_hog/msg/: RobotCamGlobalPos.msg  RobotCamPos.msg
src/detect_hog/result/: left.avi  out1.avi
src/detect_hog/src/: .detect_back.cpp.kate-swp  detect.cpp  detect2.cpp  detect3.cpp  detect_back.cpp  detect_back_v2.cpp  detect_global.cpp  detect_left.cpp  detect_right.cpp  read_globalPos.cpp
src/detect_hog_2/: CMakeLists.txt  package.xml
src/detect_hog_2/dataset_deck/: HOG_SVM_1.txt
src/detect_hog_2/src/: detect.cpp
src/detect_hog_3/: CMakeLists.txt
src/detect_hog_3/dataset_deck/: HOG_SVM2.txt
src/detect_hog_3/src/: detect.cpp
